src2/objects/ServiceContract.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>IF(ISBLANK( AccountId ),&quot;&quot;,Account.AccountNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Id__c</fullName>
        <label>Contract Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_ContractUUID__c</fullName>
        <externalId>true</externalId>
        <label>Service Contract UUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ServiceContracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Contracts</label>
    </listViews>
    <listViews>
        <fullName>X01_My_Service_Contracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>01: My Service Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Skyline</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X03_Active_Contracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>02: Active Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Skyline</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X04_Inactive_Contracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>05: Inactive Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Skyline</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X05_Expried_Contracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>04: Expired Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Skyline</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X06_Contracts_Expiring_This_Quarter</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.ENDDATE</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <label>03: Contracts Expiring - next 90 days</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Skyline</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>